[package]
name = "mexalydocs"
version = "0.1.0"
edition = "2021"  # This should be 2021, not 2024

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"

# Local dependencies
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm-migration]
version = "0.12"
features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
]